<resources>
    <string name="app_name">PisanGG Base Apps</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>


    <string name="msg_title_failed_update_data">Update Data Failed!</string>
    <string name="msg_content_failed_update_data">Failed to updating data, do you want to retry?</string>
    <string name="msg_title_logout_confirm">Logout Confirmation</string>
    <string name="msg_content_logout_confirm">Do you want to logout?</string>


    <string name="btn_text_no">No</string>
    <string name="btn_text_yes">Yes</string>
    <string name="btn_sign_in">Log in</string>
    <string name="btn_sign_up">Register</string>


    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_register">Sign up</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_phone_number">Phone Number</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_invalid_confirm_password">Password does not matched</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- FB -->

    <string name="facebook_app_id">211771352930277</string>
    <string name="fb_login_protocol_scheme">fb211771352930277</string>


</resources>
