<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llBackgroundLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.leopisang.tchallo.app.view.activity.LoginActivity"
    android:background="@mipmap/view">

<!--android:background="@color/apps_color"-->
    <ImageView
        android:id="@+id/ivLoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher_round"
        android:layout_gravity="center"/>

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_email_white_24dp"
                    android:drawablePadding="12dp"
                    android:drawableRight="@drawable/ic_email_white_24dp"
                    android:ems="10"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="8dp"
                    android:textColor="@android:color/white"
                    android:textColorHint="#fff" />

                <!--<AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="#fff"
                    android:padding="8dp"
                    android:background="@android:color/transparent"
                    android:drawableRight="@drawable/ic_email_white_24dp"
                    android:drawableLeft="@drawable/ic_email_white_24dp"
                    android:textAlignment="center" />-->


            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:padding="8dp"
                    android:textColorHint="#fff"
                    android:textColor="@android:color/white"
                    android:layout_marginTop="4dp"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:drawablePadding="12dp"
                    android:drawableRight="@drawable/ic_lock_white_24dp"
                    android:ems="10"/>

                <!--<EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/white"
                    android:textColorHint="#fff"
                    android:padding="8dp"
                    android:drawableRight="@drawable/ic_lock_white_24dp"
                    android:drawableLeft="@drawable/ic_lock_white_24dp"
                    android:textAlignment="center"
                    />-->

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/btn_sign_in"
                android:textStyle="bold"
                android:background="@drawable/background_login"
                android:textAllCaps="false"
                android:textColor="#f16f7d"
                android:textSize="18sp"
                android:padding="14dp"/>

            <!--Added by Willy-->

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:clickable="true"
                android:padding="12dp"
                android:text="Forget your password?"
                android:textColor="#fff" />

            <TextView
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:padding="12dp"
                android:text="Don't have an account yet?"
                android:textColor="#fff"
                android:layout_gravity="center_horizontal"
                android:textSize="17sp"/>


            <Button
                android:id="@+id/email_sign_up_button"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_signup"
                android:clickable="true"
                android:padding="14dp"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:textColor="#fff"
                android:textSize="18sp" />



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="OR"
                    android:textColor="#FFFFFF"
                    android:textSize="17sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="16dp"
                    android:layout_toLeftOf="@id/tvText"
                    android:background="#FFF"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="16dp"
                    android:layout_toRightOf="@id/tvText"
                    android:background="#FFF"
                    />

            </RelativeLayout>

            <!--FB button-->

            <!--<com.facebook.login.widget.LoginButton
                android:id="@+id/fb_login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:layout_centerHorizontal="true"
                />-->


        </LinearLayout>
    </ScrollView>
</LinearLayout>
